# chunkhound-index-compactor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  package-lock.json  package.json  pyproject.toml  renovate.json5
.claude/: settings.json
.claude/hook-contexts/: writing-commit-messages.md
.claude/skills/writing-docs/: SKILL.md
.claude/skills/writing-docs/references/: agents-md.md  anti-ai-slop.md  surface-shapes.md  writing-style.md
.claude/skills/writing-python-code/: SKILL.md
.claude/skills/writing-python-code/references/: comments.md  in-repo-primitives.md  pydoc.md
.claude/skills/writing-tests/: SKILL.md
.claude/skills/writing-tests/references/: behavior.md  data.md  independence.md  shape.md
.github/workflows/: ci.yml  release.yml  rolling.yml  test-action.yml
docs/: architecture.md  benchmarks.md  out-of-scope.md
scripts/: run-action.sh
src/chunkhound_index_compactor/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py  test_extensions.py  test_human_size.py  test_rebuild.py
tests/fixtures/: .gitignore  shopware-cli-chunks.duckdb
