[project]
name = "chunkhound-index-compactor"
version = "0.1.0"
description = "Compact a DuckDB database (ChunkHound index or otherwise) by rebuilding it into a fresh file"
requires-python = ">=3.10,<3.14"
license = "MIT"
dependencies = [
    "duckdb>=1.4.0,<1.5.3.dev0",
    "duckdb-extension-vss>=1.5.2",
    "typer>=0.25",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[project.scripts]
chunkhound-index-compactor = "chunkhound_index_compactor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chunkhound_index_compactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chunkhound_index_compactor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["duckdb", "duckdb_extension_vss"]
ignore_missing_imports = true
