[project]
name = "chunkhound-index-compactor"
version = "0.5.0"
description = "Compact a bloated ChunkHound DuckDB index by rebuilding it into a fresh file"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Martin Bens", email = "martin.bens@it-bens.de" }]
keywords = ["duckdb", "chunkhound", "compact", "hnsw", "vector-index", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chunkhound-index-commons>=0.1,<0.2",
    "click>=8.1",
    "typer>=0.25",
]

[project.urls]
Homepage = "https://github.com/it-bens/chunkhound-index-compactor"
Repository = "https://github.com/it-bens/chunkhound-index-compactor"
Issues = "https://github.com/it-bens/chunkhound-index-compactor/issues"
Changelog = "https://github.com/it-bens/chunkhound-index-compactor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=2.1",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "typos>=1.46",
]

[project.scripts]
chunkhound-index-compactor = "chunkhound_index_compactor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chunkhound_index_compactor"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "docs/", ".github/", ".claude/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chunkhound_index_compactor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["duckdb", "duckdb_extension_vss"]
ignore_missing_imports = true
